// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration-main empty queue - nothing to do 1`] = `
{
  "BEGIN": 5,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 2,
}
`;

exports[`integration-main if checkEventAndGeneratePayload methods throws an error --> entry should not be processed + status should be error 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions. Error: Error: error during processing",
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`integration-main if checkEventAndGeneratePayload methods throws an error --> entry should not be processed + status should be error 2`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main if cluster methods throws an error --> entry should not be processed + status should be error 1`] = `
[
  [
    "Error during clustering of events - setting all queue entries to error. Error: Error: error during processing",
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`integration-main if cluster methods throws an error --> entry should not be processed + status should be error 2`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 3,
  "ROLLBACK": 1,
  "UPDATE": 2,
}
`;

exports[`integration-main if modifyQueueEntry methods throws an error --> entry should not be processed + status should be error 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions. Error: Error: error during processing",
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`integration-main if modifyQueueEntry methods throws an error --> entry should not be processed + status should be error 2`] = `
{
  "BEGIN": 6,
  "COMMIT": 5,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 2,
  "UPDATE": 2,
}
`;

exports[`integration-main if process event returns an error --> tx should be rolled backed 1`] = `
{
  "BEGIN": 9,
  "COMMIT": 6,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 5,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main if process event throws an error --> tx should be rolled backed 1`] = `
{
  "BEGIN": 9,
  "COMMIT": 6,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 5,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main insert one entry and process 1`] = `
{
  "BEGIN": 9,
  "COMMIT": 6,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 5,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main returning exceeded status should be allowed 1`] = `
{
  "BEGIN": 8,
  "COMMIT": 6,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 4,
  "ROLLBACK": 1,
  "UPDATE": 3,
}
`;

exports[`integration-main returning exceeded status should be allowed 2`] = `
{
  "BEGIN": 4,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 2,
}
`;

exports[`integration-main should delete event entries after 30 days 1`] = `
{
  "BEGIN": 5,
  "COMMIT": 4,
  "CREATE": 1,
  "DELETE": 2,
  "READ": 2,
}
`;

exports[`integration-main should do nothing if lock for event combination cannot be acquired 1`] = `
{
  "BEGIN": 2,
  "COMMIT": 1,
  "CREATE": 1,
  "READ": 2,
}
`;

exports[`integration-main transactionMode=alwaysCommit one green with register rollback in processEvent --> tx rollback even mode alwaysCommit 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main transactionMode=alwaysCommit one green with register rollback in processEvent --> tx rollback even mode alwaysCommit 2`] = `
[
  {
    "attempts": 1,
    "status": 2,
  },
]
`;

exports[`integration-main transactionMode=alwaysCommit one with error + one without error --> tx no rollback because mode alwaysCommit 1`] = `
{
  "BEGIN": 8,
  "COMMIT": 7,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 1,
  "UPDATE": 5,
}
`;

exports[`integration-main transactionMode=alwaysCommit one with error + one without error --> tx no rollback because mode alwaysCommit 2`] = `
[
  {
    "attempts": 0,
    "status": 0,
  },
  {
    "attempts": 1,
    "status": 2,
  },
  {
    "attempts": 1,
    "status": 3,
  },
]
`;

exports[`integration-main transactionMode=alwaysRollback one green --> tx rollback even all green 1`] = `
{
  "BEGIN": 7,
  "COMMIT": 5,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 3,
  "ROLLBACK": 2,
  "UPDATE": 3,
}
`;

exports[`integration-main transactionMode=alwaysRollback one green --> tx rollback even all green 2`] = `
[
  {
    "attempts": 1,
    "status": 2,
  },
]
`;

exports[`integration-main transactionMode=alwaysRollback one with error + one without error --> tx rollback because mode alwaysRollback 1`] = `
{
  "BEGIN": 8,
  "COMMIT": 6,
  "CREATE": 2,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 2,
  "UPDATE": 5,
}
`;

exports[`integration-main transactionMode=alwaysRollback one with error + one without error --> tx rollback because mode alwaysRollback 2`] = `
[
  {
    "attempts": 1,
    "status": 2,
  },
  {
    "attempts": 1,
    "status": 3,
  },
]
`;

exports[`integration-main transactionMode=isolated both processed register tx rollback - both should be roll back 1`] = `
{
  "BEGIN": 11,
  "COMMIT": 7,
  "CREATE": 3,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 3,
  "UPDATE": 5,
}
`;

exports[`integration-main transactionMode=isolated first processed register tx rollback - only first should be rolled back 1`] = `
[
  {
    "attempts": 1,
    "status": 2,
  },
  {
    "attempts": 0,
    "status": 0,
  },
  {
    "attempts": 1,
    "status": 2,
  },
]
`;

exports[`integration-main transactionMode=isolated first processed register tx rollback - only first should be rolled back 2`] = `
{
  "BEGIN": 11,
  "COMMIT": 8,
  "CREATE": 3,
  "DELETE": 1,
  "READ": 6,
  "ROLLBACK": 2,
  "UPDATE": 5,
}
`;

exports[`integration-main two entries with no commit on event level 1`] = `
{
  "BEGIN": 9,
  "COMMIT": 6,
  "CREATE": 1,
  "DELETE": 1,
  "READ": 8,
  "ROLLBACK": 2,
  "UPDATE": 4,
}
`;
